feat(stable): Add first stable version with a minimum of documentation;

--- a/infrastrcuture/docker/Dockerfile
+++ b/infrastrcuture/docker/Dockerfile
@@ -15,6 +15,9 @@ COPY . .
 WORKDIR /app/cmd/proxy
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o proxy .
 
+WORKDIR /app/cmd/shard
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o shard .
+
 # Stage 2: Run the application using scratch
 FROM scratch
 
@@ -23,6 +26,7 @@ WORKDIR /app
 USER 1001
 # Copy the binary from the builder stage
 COPY --from=builder /app/cmd/proxy/proxy .
+COPY --from=builder /app/cmd/shard/shard .
 
 # Command to run the executable
 CMD ["./proxy"]
