feat(monitoring): Add prometheus exporter, refactor configs;

--- a/examples/config/config.yaml
+++ b/examples/config/config.yaml
@@ -3,8 +3,8 @@ logs:
   - index: example
     discovery:
       type: file
-      location: tmp/config/logs
+      location: .local/config/logs
   - index: infrastructure
     discovery:
       type: file
-      location: tmp/config/logs
+      location: .local/config/logs
