feat(providers): Add aggregated log provider that allows to setup several providers for one index;
BREAKING CHANGE: Configuration structure has been updated not provider not string but object;

--- a/examples/config/config.yaml
+++ b/examples/config/config.yaml
@@ -8,3 +8,7 @@ logs:
     discovery:
       type: file
       location: .local/config/logs
+  - index: internal
+    discovery:
+      type: file
+      location: .local/config/logs
